# fast-plotter

./: .gitlab-ci.yml  .requirements_dev.txt  .travis.yml  CHANGELOG.md  Makefile  README.md  README.rst  __main__.py  plotting.py  pyproject.toml  setup.cfg  setup.py  tox.ini  utils.py
docs/: Makefile  command_line.rst  conf.py  config.rst  index.rst  requirements.txt
fast_plotter/: __init__.py  __main__.py  corr_matrices.py  interval_from_str.py  plotting.py  plotting_2d.py  statistics.py  utils.py  version.py
fast_plotter/postproc/: __init__.py  __main__.py  functions.py  query_curator.py  scale_datasets.py  stages.py
fast_plotter/v1/: __init__.py  config.py  hist_collections.py  plot.py  settings.py
fast_plotter/v1/plugins/: _matplotlib.py  _mplhep.py
tests/: tbl_datset.njet.csv  test_plotting.py  test_statistics.py  test_utils.py
tests/postproc/: test_functions.py
