[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fast_plotter"
authors = [
    { name = "Ben Krikler", email = "fast-hep@cern.ch" },
]
maintainers = [
    { name = "FAST-HEP", email = "fast-hep@cern.ch" },
]
readme = "README.rst"
description = "FASTHEP package for creating plots"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]
requires-python = ">=3.8"

[project.urls]
Home = "https://github.com/fast-hep/fast-plotter"

[project.optional-dependencies]
test = [
    "pytest >=6",
    "pytest-cov >=2.12",
    "flake8 >=3.9",
]

docs = [
    "sphinx >=4.0",
    "sphinx_rtd_theme >=1.0",
    "sphinxcontrib-bibtex >=2.4",
    "sphinxcontrib-programoutput >=0.16",
]

[project.scripts]
fast_plotter = "fast_plotter.__main__:main"
fast_plotter_postproc = "fast_plotter.postproc.__main__:main"